# arquitetura_python

./: Makefile  README.md  main.py  pyproject.toml  readme.md
arquitetura/application/: __init__.py
arquitetura/application/notification/: __init__.py
arquitetura/application/subscription/: __init__.py
arquitetura/application/user/: __init__.py
arquitetura/domain/entity/: notification_model.py  subscription_model.py  user_model.py
arquitetura/handler/api_v1/: api.py
arquitetura/handler/api_v1/endpoints/: notification.py  subscription.py  user.py
arquitetura/infra/database/: session.py
arquitetura/infra/repository/: __init__.py  notification_repository.py  subscription_repository.py  user_repository.py
arquitetura/infra/schema/: notification.py  subscription.py  user.py
arquitetura/shared/config/: __init__.py
arquitetura/shared/dependencies/: __init__.py
