[tool.poetry]
name = "arquiteturapython"
version = "0.1.0"
description = "Exemplo de arquitetura em python"
authors = ["Diego Flauzino Yamasaki"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.9"
pydantic = {extras = ["email"], version = "^1.10.7"}
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
